remove u from the internal hom scheme

--- a/mo.tex
+++ b/mo.tex
@@ -413,7 +413,7 @@ As group schemes, we have thus calculated \[\RP^\infty_{\HFtwo P} \cong \G_a.\]
 \end{example}
 
 \begin{example}\label{FirstAppearanceOfInternalAut}
-Noting the homomorphism condition appeaing in \Cref{SteenrodAlgIdentifiedWithAutGa}, we would like to connect $\Spec \mathcal AP_0$ with $\G_a$ more directly.  Toward this, we define a \index{formal group!homomorphism}``hom functor''\footnote{We are careful to say ``functor'' here because it is \emph{not} generally another scheme.} for two formal schemes: \[\InternalHom{FormalSchemes}(X, Y)(T) = \left\{ (u, f) \middle| \begin{array}{c} u: \Spec T \to \Spec \F_2, \\ f: u^* X \to u^* Y \end{array}\right\}.\]  Restricting attention to homomorphisms, we see that a name for $\Spec \mathcal AP_0$ is \[\Spec \mathcal AP_0 \cong \InternalAut \G_a.\]  To check this, consider a point $g \in (\Spec \mathcal AP_0)(T)$ for an $\F_2$--algebra $T$.  The $\F_2$--algebra structure of $T$ (which is uniquely determined by a property of $T$) gives rise to a map $u\co \Spec T \to \Spec \F_2$.  The rest of the data of $g$ gives rise to a power series in $T\ps{x}$ as in the proof of \Cref{SteenrodAlgIdentifiedWithAutGa}, which can be re-interpreted as an automorphism $g\co u^* \G_a \to u^* \G_a$ of formal group schemes.\footnote{This description, too, is sensitive to the difference between $\G_a$ and $\mathbb G_a$.  The scheme $\InternalEnd \mathbb G_a$ is populated by \emph{polynomials} satisfying a homomorphism condition, and essentially none of them have inverses.}
+Noting the homomorphism condition appeaing in \Cref{SteenrodAlgIdentifiedWithAutGa}, we would like to connect $\Spec \mathcal AP_0$ with $\G_a$ more directly.  Toward this, we define a \index{formal group!homomorphism}``hom functor''\footnote{We are careful to say ``functor'' here because it is \emph{not} generally another scheme.} for two formal schemes: \[\InternalHom{FormalSchemes}(X, Y)(\F_2 \xrightarrow{u} T) = \left\{ f\co u^* X \to u^* Y \right\}.\]  Restricting attention to homomorphisms, we see that a name for $\Spec \mathcal AP_0$ is \[\Spec \mathcal AP_0 \cong \InternalAut \G_a.\]  To check this, consider a point $g \in (\Spec \mathcal AP_0)(T)$ for an $\F_2$--algebra $T$.  The $\F_2$--algebra structure of $T$ (which is uniquely determined by a property of $T$) gives rise to a map $u\co \Spec T \to \Spec \F_2$.  The rest of the data of $g$ gives rise to a power series in $T\ps{x}$ as in the proof of \Cref{SteenrodAlgIdentifiedWithAutGa}, which can be re-interpreted as an automorphism $g\co u^* \G_a \to u^* \G_a$ of formal group schemes.\footnote{This description, too, is sensitive to the difference between $\G_a$ and $\mathbb G_a$.  The scheme $\InternalEnd \mathbb G_a$ is populated by \emph{polynomials} satisfying a homomorphism condition, and essentially none of them have inverses.}
 \end{example}
 
 \begin{remark}\label{AutGaHasStableCoopns}
