fix an R vs A typo

--- a/quillen.tex
+++ b/quillen.tex
@@ -50,7 +50,7 @@ is called the \index{scheme!affine}\textit{spectrum of $A$}.  A functor $X$ whic
 \begin{center}
 \begin{tikzcd}
 Y \arrow{r} \arrow[leftarrow, "\simeq"]{d} & X \arrow[leftarrow, "\simeq"]{d} \\
-\Spec (R/I) \arrow{r} & \Spec R.
+\Spec (A/I) \arrow{r} & \Spec A.
 \end{tikzcd}
 \end{center}
 \end{definition}
