declare R to be fixed

--- a/quillen.tex
+++ b/quillen.tex
@@ -41,7 +41,7 @@ The execution of this proof requires some understanding of cohomology operations
 
 In light of the introduction, we see that it would be prudent to develop some of the theory of formal schemes and formal varieties outside of the context of $\F_2$--algebras.  However, writing down a list of definitions and checking that they have good enough properties is not especially enlightening or fun.  Instead, it will be informative to understand where these objects come from in algebraic geometry, so that we can carry the accompanying geometric intuition along with us as we maneuver our way back toward homotopy theory and bordism.  Our overarching goal in this Lecture is to develop a notion of calculus (and analytic expansions in particular) in the context of affine schemes.  The place to begin is with definitions of cotangent and tangent spaces, as well as some supporting vocabulary.
 \begin{definition}[{cf.\ \Cref{DefnAffineF2Scheme}}]
-For an $R$--algebra $A$, the functor
+Fix a ring $R$.  $For an $R$--algebra $A$, the functor
 \begin{align*}
 \Spec A \co \CatOf{Algebras}_R & \to \CatOf{Sets}, \\
 T & \mapsto \CatOf{Algebras}_R(A, T)
