be explicit about the ring of functions on a formal affine var

--- a/quillen.tex
+++ b/quillen.tex
@@ -99,7 +99,7 @@ Picking the affine scheme $X = \Spec R[x_1, \ldots, x_n] = \mathbb A^n$ and the 
 
 Part of the point of the geometric language is to divorce abstract rings (e.g., $E^0 \CP^\infty$) from concrete presentations (e.g., $E^0\ps{x}$), so we additionally reserve some vocabulary for the property of being isomorphic to $\A^n$:
 \begin{definition}\label{DefnFormalVariety}
-A \index{formal scheme!formal variety}\textit{formal affine variety} (of dimension $n$) is a formal scheme $V$ which is (noncanonically) isomorphic to $\A^n$.  The two maps in an isomorphism pair \[V \xrightarrow{\simeq} \A^n, \quad V \xleftarrow{\simeq} \A^n\] are called a \index{coordinate!system}\textit{coordinate (system)} and a \index{parameter!system}\textit{parameter (system)} respectively.  Finally, an $S$--point $x\co S \to X$ is called \index{formal scheme!smooth}\textit{formally smooth} when $X^\wedge_x$ gives a formal variety.
+A \index{formal scheme!formal variety}\textit{formal affine variety} (of dimension $n$) is a formal scheme $V$ which is (noncanonically) isomorphic to $\A^n$---or, equivalently, $\sheaf O_V$ is (noncanonically) isomorphic to a power series ring.  The two maps in an isomorphism pair \[V \xrightarrow{\simeq} \A^n, \quad V \xleftarrow{\simeq} \A^n\] are called a \index{coordinate!system}\textit{coordinate (system)} and a \index{parameter!system}\textit{parameter (system)} respectively.  Finally, an $S$--point $x\co S \to X$ is called \index{formal scheme!smooth}\textit{formally smooth} when $X^\wedge_x$ gives a formal variety.
 \end{definition}
 
 This definition allows local theorems from analytic differential geometry to be imported in coordinate-free language.  For instance, there is the following version of the \index{inverse function theorem}inverse function theorem:
