--- a/quillen.tex
+++ b/quillen.tex
@@ -125,7 +125,7 @@ In the motivating case where $F \cong \A^n$ is given, we can define $M$ to be \[
 \end{proof}
 
 \begin{corollary}[{\cite[Th\'eor\`eme III.2.1]{GrothendieckSGAI}}]
-An $S$--point $x\co S \to X$ of a Noetherian scheme is formally smooth exactly when $T_x X$ is a free $S$--module and for any nilpotent thickenings $S \to \Spec B \to \Spec B'$ and any solid diagram
+An $S$--point $x\co S \to X$ of a Noetherian scheme is formally smooth exactly when $T_x X$ is a free $R$--module and for any nilpotent thickenings $S \to \Spec B \to \Spec B'$ and any solid diagram
 \begin{center}
 \begin{tikzcd}[column sep=3em]
 S \arrow{r} \arrow["x"]{rd} & \Spec B \arrow{r} \arrow{d} & \Spec B' \arrow[densely dotted]{ld} \\
