clarify even-concentrated failure footnote and rational log proof

--- a/quillen.tex
+++ b/quillen.tex
@@ -138,7 +138,7 @@ there exists a dotted arrow extending the diagram. \qed
 With all this algebraic geometry in hand, we now return to our original motivation: extracting formal schemes from the rings appearing in algebraic topology.
 
 \begin{definition}[{cf.\ \Cref{FullDefnOfXHF2}}]\label{FullDefnOfXE}
-\index{formal scheme!from a space}Let $E$ be an even-periodic ring spectrum, and let $X$ be a CW--space.  Because $X$ is compactly generated, it can be written as the colimit of its compact subspaces $X^{(\alpha)}$, and we set\footnote{The careful reader will immediately notice that the rings in the pro-system underlying \Cref{FullDefnOfXE} run the risk of not being even-concentrated.  We are thus required to make the following technical compromise: for any system of even $E^0$--algebras $\{R_\beta\}$ with a pro-isomorphism $\{R_\beta \otimes_{E^0} E^*\} \cong \{E^0 X^{(\alpha)}\}_\alpha$ we set \[X_E := \{\Spec R_\beta\}_\beta,\] and otherwise we leave $X_E$ undefined.  For example, the technical condition of \Cref{FullDefnOfXE} is satisfied if there exists a cofinal subsystem of $\{X^{(\alpha)}\}_\alpha$ with $E^* X^{(\alpha)}$ even--concentrated.  This follows, for instance, from $H\Z_* X$ being free and even~\cite[Definition 8.15, Proposition 8.17]{StricklandFSFG}.}\footnote{In cases of ``large'' spaces and cohomology theories, the technical points underlying this definition are necessary: $BU_{KU}$ is an instructive example, as it is \emph{not} the formal scheme associated to $KU^0(BU)$ by any adic topology.} \[X_E := \Spf E^0 X := \{\Spec E^0 X^{(\alpha)}\}_\alpha.\]
+\index{formal scheme!from a space}Let $E$ be an even-periodic ring spectrum, and let $X$ be a CW--space.  Because $X$ is compactly generated, it can be written as the colimit of its compact subspaces $X^{(\alpha)}$, and we set\footnote{The properties satisfied by this construction suffer greatly if it is not the case that the $E$--cohomology of $X$ is even-concentrated, i.e., if $E^* X \cong E^* \otimes_{E^0} E^0 X$ is violated.  In fact, even the intermediate failure of $E^* X_\alpha \cong E^* \otimes_{E^0} E^0 X_\alpha$ can cause issues, but passing to a clever cofinal subsystem often alleviates them.  For instance, such a subsystem exists if $H\Z_* X$ is free and even~\cite[Definition 8.15, Proposition 8.17]{StricklandFSFG}.}\footnote{In cases of ``large'' spaces and cohomology theories, the technical points underlying this definition are necessary: $BU_{KU}$ is an instructive example, as it is \emph{not} the formal scheme associated to $KU^0(BU)$ by any adic topology.} \[X_E := \Spf E^0 X := \{\Spec E^0 X^{(\alpha)}\}_\alpha.\]
 \end{definition}
 
 Consider the example of $\CP^\infty_E$ for $E$ a complex-oriented cohomology theory.  We saw in \Cref{CPinftyNiceCalculation} that the complex-orientation determines an isomorphism $\CP^\infty_E \cong \A^1$ (i.e., an isomorphism $E^0 \CP^\infty \cong E^0\ps{x}$).  However, the object ``$E^0 \CP^\infty$'' is something that exists independent of the orientation map $MU \to E$, and the language of \Cref{DefnFormalVariety} allows us to make the distinction between the property and the data:
@@ -218,7 +218,9 @@ A $1$--form $\omega \in \Omega^1_{A/R}$ is said to be \index{Kahler differential
 For $R$ a $\Q$--algebra, there is a canonical isomorphism of formal groups \[\log\co \G \to T_0 \G \otimes \G_a.\]
 \end{theorem}
 \begin{proof}
-In terms of a coordinate $\omega = f(x) dx$, the definition above becomes \[f(x) dx = f(y +_\phi x) d(y +_\phi x) = f(y +_\phi x) \frac{\partial(y +_\phi x)}{\partial x} dx.\]  Restricting to the origin by setting $x = 0$, this yields the condition \[f(0) = f(y) \cdot \left. \frac{\partial(y +_\phi x)}{\partial x} \right|_{x=0}.\]  Since $R$ is a $\Q$--algebra, integrating against $y$ yields \[\log_\phi(y) := \int f(y) \, dy = f(0) \int \left( \left. \frac{\partial(y +_\phi x)}{\partial x} \right|_{x=0} \right)^{-1} dy.\]  To see that the series $\log_\phi$ has the claimed homomorphism property, note that \[\frac{\partial \log_\phi(y +_\phi x)}{\partial x} dx = f(y +_\phi x) d(y +_\phi x) = f(x) dx = \frac{\partial \log_\phi(x)}{\partial x} dx,\] so $\log_\phi(y +_\phi x)$ and $\log_\phi(x)$ differ by a constant.  Checking at $x = 0$ shows that the constant is $\log_\phi(y)$, hence \[\log_\phi(x +_\phi y) = \log_\phi(x) + \log_\phi(y).\]  The choice of boundary value $f(0)$ corresponds to the choice of vector in $T_0 \G$.
+We set out to construct such an isomorphism in terms of a coordinate $x$.  In terms of $x$, a differential $\omega$ admits expression as $\omega = f(x) dx$, and the invariance condition above becomes \[f(x) dx = f(y +_\phi x) d(y +_\phi x) = f(y +_\phi x) \frac{\partial(y +_\phi x)}{\partial x} dx.\]  We will analyze the set of such invariant differentials.
+
+Restricting the above equation to the origin by setting $x = 0$, we produce the condition \[f(0) = f(y) \cdot \left. \frac{\partial(y +_\phi x)}{\partial x} \right|_{x=0}.\]  Since $R$ is a $\Q$--algebra, we may integrate against $y$ to yield \[\log_\phi(y) := \int f(y) \, dy = f(0) \int \left( \left. \frac{\partial(y +_\phi x)}{\partial x} \right|_{x=0} \right)^{-1} dy.\]  To see that the series $\log_\phi$ has the claimed homomorphism property, note that \[\frac{\partial \log_\phi(y +_\phi x)}{\partial x} dx = f(y +_\phi x) d(y +_\phi x) = f(x) dx = \frac{\partial \log_\phi(x)}{\partial x} dx,\] so $\log_\phi(y +_\phi x)$ and $\log_\phi(x)$ differ by a constant.  Checking at $x = 0$ shows that the constant is $\log_\phi(y)$, hence \[\log_\phi(x +_\phi y) = \log_\phi(x) + \log_\phi(y).\]  The choice of boundary value $f(0)$ corresponds to the choice of vector in $T_0 \G$, and the space of invariant differentials (and thus their corresponding logarithms) is parametrized by the tangent space of $\G$.
 \end{proof}
 
 \begin{example}\label{GmAndItsLogExample}
