fix naturality claim

--- a/quillen.tex
+++ b/quillen.tex
@@ -372,7 +372,7 @@ This construction enjoys many properties already established.
 A vector bundle $V$ over $Y$ and a map $f \co X \to Y$ induce an isomorphism \[\ThomSheaf{f^* V} \cong (f_E)^* \ThomSheaf{V}.\]  There is also is a canonical isomorphism \[\ThomSheaf{V \oplus W} = \ThomSheaf{V} \otimes \ThomSheaf{W}.\]  Finally, this property can then be used to extend the definition of $\ThomSheaf{V}$ to virtual bundles: \[\ThomSheaf{V - W} = \ThomSheaf{V} \otimes \ThomSheaf{W}^{-1}.\]
 \end{corollary}
 \begin{proof}
-The first claim is justified by \Cref{ThomConstructionIsASliceFunctor}, the second by \Cref{ThomSpacesAreMonoidal}, and the last is a direct consequence of the first two.
+The first claim is justified by the naturality of \Cref{GeneralThomIsom}, the second is justified by \Cref{ThomSpacesAreMonoidal}, and the last is a direct consequence of the first two.
 \end{proof}
 
 We use these properties to work the following Example, which connects Thom sheaves with the major players from \Cref{FormalVarietiesLecture}.
