no degree shifts in H_∞ structures to start

--- a/quillen.tex
+++ b/quillen.tex
@@ -593,7 +593,7 @@ Given a spectrum $E$, its $n$--fold smash power forms a \index{equivariant spect
 (\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \arrow["f^{\sm n}_{h\Sigma_n}"]{r} & E^{\sm n}_{h\Sigma_n} \arrow[densely dotted]{ur}[description]{\mu_n}.
 \end{tikzcd}
 \end{center}
-A ring spectrum $E$ equipped with a suite of factorizations $\mu_n$ satisfying compatibility laws embodying term collection (i.e., $x^a \cdot x^b = x^{a+b}$) and iterated exponentiation (i.e., $(x^a)^b = x^{ab}$) is called an \index{H infty ring spectrum@$H_\infty$ ring spectrum}\textit{$H_\infty$--ring spectrum}~\cite[Definition I.3.1]{BMMS}.  The composite \[P^{\Sigma_n}_{\mathrm{ext}}f\co (\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \xrightarrow{f^{\sm n}_{h\Sigma_n}} (\S^q \sm E)^{\sm n}_{h\Sigma_n} \xrightarrow{\mu_{n,q}} \S^{nq} \sm E\] is called the \textit{external (total) $\Sigma_n$--power operation} applied to $f$, and the restriction to the diagonal subspace \[P^{\Sigma_n}f \co \Susp^\infty_+ X \sm \Susp^\infty_+ B\Sigma_n \simeq (\Susp^\infty_+ X)_{h\Sigma_n} \xrightarrow{\Delta_{h\Sigma_n}} (\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \xrightarrow{P^{\Sigma_n}_{\mathrm{ext}}f} E\] is called the \textit{(internal total) $\Sigma_n$--power operation} applied to $f$.  We can consider it as a cohomology class lying in \[P^{\Sigma_n} f \in E^0(X \times B\Sigma_n).\]
+A ring spectrum $E$ equipped with a suite of factorizations $\mu_n$ satisfying compatibility laws embodying term collection (i.e., $x^a \cdot x^b = x^{a+b}$) and iterated exponentiation (i.e., $(x^a)^b = x^{ab}$) is called an \index{H infty ring spectrum@$H_\infty$ ring spectrum}\textit{$H_\infty$--ring spectrum}~\cite[Definition I.3.1]{BMMS}.  The composite \[P^{\Sigma_n}_{\mathrm{ext}}f\co (\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \xrightarrow{f^{\sm n}_{h\Sigma_n}} E^{\sm n}_{h\Sigma_n} \xrightarrow{\mu_n} E\] is called the \textit{external (total) $\Sigma_n$--power operation} applied to $f$, and the restriction to the diagonal subspace \[P^{\Sigma_n}f \co \Susp^\infty_+ X \sm \Susp^\infty_+ B\Sigma_n \simeq (\Susp^\infty_+ X)_{h\Sigma_n} \xrightarrow{\Delta_{h\Sigma_n}} (\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \xrightarrow{P^{\Sigma_n}_{\mathrm{ext}}f} E\] is called the \textit{(internal total) $\Sigma_n$--power operation} applied to $f$.  We can consider it as a cohomology class lying in \[P^{\Sigma_n} f \in E^0(X \times B\Sigma_n).\]
 
 Cohomology classes $f \in E^{-q}(X)$ lying in degrees $q \ne 0$ require more care.  Representing such a class as a map $f\co \Susp^\infty_+ X \to \S^q \sm E$, the analogous diagram is
 \begin{center}
