--- a/finite.tex
+++ b/finite.tex
@@ -45,7 +45,7 @@ In \Cref{HopfAlgebraLecture} we took for granted the $\HFtwo$--Adams spectral se
 At a maximum level of vagueness, we are seeking a process by which its homotopy $\pi_* X$ can be recovered from the $E$--homology groups $E_* X$.  Generally speaking, spectral sequences arise from applying homotopy groups to some topological filtration, so we might also try to filter $X$ by pieces that look like $E \sm X$.  Recognizing that $X$ can be thought of as an $\S$--module and $E \sm X$ can be thought of as its base change to an $E$--module, we are inspired to double back and consider as inspiration a completely algebraic analogue of the same situation.  Given a ring map $f\co R \to S$ and an $S$--module $N$, Grothendieck's framework of \index{descent!faithfully flat}\textit{(faithfully flat) descent} addresses the following questions:
 \begin{enumerate}
 \item When is there an $R$--module $M$ such that $N \cong S \otimes_R M = f^* M$?
-\item What extra data can be placed on $N$, called \textit{descent data}, so that the category of descent data for $N$ is equivalent to the category of $R$--modules under the map $f^*$?
+\item What extra data can be placed on $N$, called \textit{descent data}, so that the category of descent data for $f$ is equivalent to the category of $R$--modules under the map $f^*$?
 \item What conditions can be placed on $f$ so that the category of descent data for any given module is always contractible, called \index{descent!effective}\textit{effectivity}?
 \end{enumerate}
 
