rephrase construction of steenrod coaction

--- a/mo.tex
+++ b/mo.tex
@@ -343,14 +343,12 @@ Our route to finding this internally occurring $\alpha^*$ is by turning to the n
 \end{center}
 will be difficult to squeeze into any kind of algebro-geometric framework.  Milnor was the first person to see a way around this, with two crucial observations.  First, the Steenrod algebra is a Hopf algebra\footnote{The construction of both the Hopf algebra diagonal here and the coaction map below is somewhat ad hoc.  We will give a more robust presentation in \Cref{StableContextLecture}.}, using the map \[[\HFtwo, \HFtwo]_* \xrightarrow{\mu^*} [\HFtwo \sm \HFtwo, \HFtwo]_* \cong [\HFtwo, \HFtwo]_* \otimes [\HFtwo, \HFtwo]_*\] as the diagonal.  This Hopf algebra structure is actually cocommutative---this is a rephrasing of the symmetry of the \index{Cartan formula}Cartan formula: \[\Sq^n(x y) = \sum_{i+j=n} \Sq^i(x) \Sq^j(y).\]  It follows that the linear-algebraic dual of the Steenrod algebra $\mathcal A_*$ is a commutative ring, and hence $\Spec \mathcal A_*$ would make a reasonable algebro-geometric object.
 
-Second, we want to identify the role of $\mathcal A_*$ in acting on $\HFtwo^* X$.  By assuming that $X$ is a finite complex, we can write it as the Spanier--Whitehead dual $X = DY$ of some other finite complex $Y$.  Starting with the action map on $\HFtwo^* Y$:
+Second, we want to identify the relationship between $\mathcal A_*$ and $\HFtwo^* X$.  Under the assumption that $X$ is a finite complex, the action map
 \begin{align*}
-\mathcal A^* \otimes \HFtwo^* Y & \to \HFtwo^* Y \\
-\intertext{we take the $\F_2$--linear dual to get a \index{Steenrod algebra!coaction}coaction map}
-\mathcal A_* \otimes H\F_{2*} Y & \from H\F_{2*} Y, \\
-\intertext{then use $X = DY$ to return to cohomology}
-\mathcal A_* \otimes \HFtwo^* X & \xleftarrow{\lambda^*} \HFtwo^* X. \\
-\intertext{Finally, we re-interpret this as an action map}
+H\F_2^* X & \from \mathcal A^* \otimes H\F_2^* X, \\
+\intertext{transposes under $\F_2$--linear duality to give a coaction map}
+\mathcal A_* \otimes H\F_2^* X & \from H\F_2^* X. \\
+\intertext{Finally, we pass to schemes to interpret this as an action map}
 \Spec \mathcal A_* \times X_{\HFtwo} & \xrightarrow{\alpha} X_{\HFtwo}.
 \end{align*}
 
