--- a/finite.tex
+++ b/finite.tex
@@ -224,7 +224,7 @@ In \Cref{DescentFromHFpToHZp}, we discussed translating from the algebra descent
 \end{remark}
 
 \begin{example}
-Most of the homology theories we will discuss have these {\CH} and {\FH} properties.  For an easy example, $\HFtwo P$ certainly has this property: there is only one possible algebraic map $\F_2 \to \mathcal A_*$, so {\FH} is necessarily satisfied.  Our work in \Cref{TheSteenrodAlgebraSection} thus grants us access to a description of the context for $\HFtwo$:\footnote{This is a bit glib: this gives a presentation of the \emph{even} part of the context for $\HFtwo P$, and the ``$\G_a$'' in the formula is $\CP^\infty_{\HFtwo}$ rather than $\RP^\infty_{\HFtwo}$.  This sleight of hand abuts the discussion of Bocksteins in \Cref{ASSForLKdS}.} \[\context{\HFtwo P} = \Spec \F_2 \mmod \InternalAut{\G_a}.\]
+Most of the homology theories we will discuss have these {\CH} and {\FH} properties.  For an easy example, $\HFtwo P$ certainly has this property: there is only one possible algebraic map $\F_2 \to \mathcal A_*$, so {\FH} is necessarily satisfied.  Our work in \Cref{TheSteenrodAlgebraSection}\footnote{The reader should spend a moment contrasting our two approaches to the definition of $\context{\HFtwo}(X)$.  Previously, we assumed that $X$ was finite type and worked with cohomology---but under exactly this assumption, the cohomology of $X$ can always be written as the homology of $Y$ for another finite spectrum satisfying $X = DY$.} thus grants us access to a description of the context for $\HFtwo$:\footnote{This is a bit glib: this gives a presentation of the \emph{even} part of the context for $\HFtwo P$, and the ``$\G_a$'' in the formula is $\CP^\infty_{\HFtwo}$ rather than $\RP^\infty_{\HFtwo}$.  This sleight of hand abuts the discussion of Bocksteins in \Cref{ASSForLKdS}.} \[\context{\HFtwo P} = \Spec \F_2 \mmod \InternalAut{\G_a}.\]
 \end{example}
 
 \begin{example}\label{ContextOfMUPExample}
