fix ‘flippant proof’

--- a/mo.tex
+++ b/mo.tex
@@ -363,11 +363,11 @@ Having produced the action map $\alpha$, we are now moved to study $\alpha$ as w
 \sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = \sum_{m=0}^\infty x^{2^m} \otimes \Delta(\xi_m),
 \end{align*}
 from which it follows that \[\Delta \xi_m = \sum_{i+j=m} \xi_i^{2^j} \otimes \xi_j.\]  Finally, Milnor shows that this is the complete story:
-\begin{theorem}[{Milnor~\cite[Theorem 2]{Milnor}, \cite[Chapter 6]{MosherTangora}}]\label{StableSteenrodAlgebraQuote}
-There is an isomorphism \[\mathcal A_* = \F_2[\xi_1, \xi_2, \ldots, \xi_j, \ldots].\]
+\begin{theorem}[{Milnor~\cite[Theorem 2]{Milnor}, \cite[Chapter 6]{MosherTangora}, \cite[Proposition 13.1]{LurieChromaticCourseNotes}}]\label{StableSteenrodAlgebraQuote}
+There is an isomorphism \[\mathcal A_* \cong \F_2[\xi_1, \xi_2, \ldots, \xi_j, \ldots].\]
 \end{theorem}
 \begin{proof}[Flippant proof]
-There is at least a map $\F_2[\xi_1, \xi_2, \ldots] \to \mathcal A_*$ given by the definition of the elements $\xi_j$ above.  This map is injective, since these elements are distinguished by how they coact on $\HFtwo^* \RP^\infty$.  Then, since these rings are of graded finite type, Milnor can conclude his argument by counting how many elements he has produced, comparing against how many Adem and Cartan found (which we will do ourselves in \Cref{UnstableContextsSection}), and noting that he has exactly enough.
+The definition of the elements $\xi_j$ determines a Hopf algebra map $\F_2[\xi_1, \xi_2, \ldots] \to \mathcal A_*$ and hence a map of schemes \[\Spec \mathcal A_* \to \Spec \F_2[\xi_j \mid j \ge 1].\]  This second map is injective: if it had a kernel, then this would produce a subalgebra of $\mathcal A^*$ that acts trivially on $\HFtwo^* \RP^\infty$, but any nonconstant member of $\mathcal A^*$ acts nontrivially on $\HFtwo^* (\RP^\infty)^{\times k}$ for $k \gg 0$, and hence nontrivially on $\HFtwo^* \RP^\infty$ itself.  Then, since $\mathcal A_*$ and the polynomial algebra are both of graded finite type, Milnor can conclude his argument by counting how many elements he has produced, comparing against how many Adem and Cartan found (which we will do ourselves in \Cref{UnstableContextsSection}), and noting that he has exactly enough.
 \end{proof}
 
 We are now in a position to uncover the desired map $\alpha^*$ from earlier.  In order to retell Milnor's story with $\HFtwo P$ in place of $\HFtwo$, note that there is a topological construction involving $\HFtwo$ from which $\mathcal A_*$ emerges: \[\mathcal A_* := \pi_*(\HFtwo \sm \HFtwo).\]  Performing substitution on this formula gives the \index{Steenrod algebra!periodified, dual}periodified dual Steenrod algebra: \[\mathcal AP_0 := \pi_0 (\HFtwo P \sm \HFtwo P) = \HFtwo P_0(\HFtwo P) = \mathcal A_*[\xi_0^\pm].\]
