--- a/mo.tex
+++ b/mo.tex
@@ -126,22 +126,15 @@ BO \times X \rar["\sigma", equiv'] \arrow[bend right]{rrrd} & BO \times X \rar["
 & & B\GL_1 \S \times B\GL_1 \S \arrow{r}{\mu} & B\GL_1 \S.
 \end{tikzcd}
 \end{center}
-This gives an equivalence $\theta_{MO}\co MO \sm T(\xi) \rightarrow MO \sm \Susp^\infty_+ X$.  To introduce $E$, note that there is a diagram
+This gives an equivalence $\theta_{MO}\co MO \sm T(\xi) \rightarrow MO \sm \Susp^\infty_+ X$.  To introduce $E$, note that there is a diagram of $MO$--module spectra
 \begin{center}
 \begin{tikzcd}
-E \sm T(\xi)  \arrow{d}{\eta_{MO} \sm \id \sm \id=f} & E \sm \Susp^\infty_+ X \arrow{d}{\eta_{MO} \sm \id \sm \id} \\
+E \sm T(\xi) \arrow{d}{\eta_{MO} \sm \id \sm \id=f} \arrow[densely dotted]{r}{\theta_E} & E \sm \Susp^\infty_+ X \arrow{d}{\eta_{MO} \sm \id \sm \id} \\
 MO \sm E \sm T(\xi) \arrow{r}{\theta_{MO} \sm E} \arrow{d}{(\mu \circ (\phi \sm \id)) \sm \id=g} & MO \sm E \sm \Susp^\infty_+ X\arrow{d}{(\mu \circ (\phi \sm \id)) \sm \id=h} \\
-E \sm T(\xi) \arrow{r}{\theta_E} & E \sm \Susp^\infty_+ X
+E \sm T(\xi) \arrow[densely dotted]{r}{\theta_E} & E \sm \Susp^\infty_+ X
 \end{tikzcd}
 \end{center}
-The bottom arrow $\theta_E$ exists by applying the action map to both sides and pushing the map $\theta_{MO} \sm E$ down.  Since $\theta_{MO}$ is an equivalence, it has an inverse $\alpha_{MO}$.  Therefore, the middle map has inverse $\alpha_{MO} \sm E$, and we can similarly push this down to a map $\alpha_E$, which we now want to show is the inverse to $\theta_E$.  From here it is a simple diagram chase: we have renamed three of the maps in the diagram to $f$, $g$, and $h$ for brevity.  Noting that $g \circ f$ is the identity map because of the unit axiom, we conclude
-\begin{align*}
-g \circ f & \simeq g \circ (\alpha_{MO} \sm E) \circ (\theta_{MO} \sm E) \circ f \\
-& \simeq \alpha_E \circ h \circ (\theta_{MO}\sm E) \circ f \tag{action map} \\
-& \simeq \alpha_E \circ \theta_E \circ g \circ f \tag{action map} \\
-& \simeq \alpha_E \circ \theta_E.
-\end{align*}
-It follows that $\alpha_E$ gives an inverse to $\theta_E$.
+whose columns are retractions.  The dotted arrows $\theta_E$ are defined by following the solid path from corner to corner, and the retraction property shows that the two squares they form commute.  Since $\theta_{MO}$ is an equivalence, it has an inverse $\alpha_{MO}$, and this similarly begets a map $\alpha_E$, which we now want to show is the inverse to $\theta_E$.  This, too, follows from the fact that the vertical edges are retractions.
 \end{proof}
 
 \begin{remark}
