warn the reader about subscripting conventions

--- a/conventions.tex
+++ b/conventions.tex
@@ -11,4 +11,5 @@ Throughout this book, we use the following conventions:
 \item For a ring spectrum $E$, we will write $E_* = \pi_* E$ for its coefficient ring, $E^* = \pi_{-*} E$ for its coefficient ring with the opposite grading, and $E_0 = E^0 = \pi_0 E$ for the $0${\th} degree component of its coefficient ring.  This allows us to make sense of expressions like ``$E^*\ps{x}$'', which we interpret as \[E^*\ps{x} = (E^*)\ps{x} = (\pi_{-*} E)\ps{x} = \left\{ \sum_{j=0}^\infty a_j x^j \middle| \begin{array}{c} \text{$a_j$ is of degree $-j \cdot *$} \\ \text{for some fixed degree $*$} \end{array} \right\}.\]
 \item For a space or spectrum, we will write $X[n, \infty) \to X$ for the upward $n${\th} \index{Postnikov tower}Postnikov truncation over $X$ and $X \to X(-\infty, n)$ for the downward $n${\th} Postnikov truncation under $X$.  There is thus a natural fiber sequence \[X[n, \infty) \to X \to X(-\infty, n).\]  This notation extends naturally to objects like $X(a, b)$ or $X[a, b]$, where $-\infty \le a \le b \le \infty$ denote the (closed or open) endpoints of any interval.
 \item We will write $S^n$ for the $n${\th} sphere when considered as a space and $\S^n$ for its suspension spectrum.  We will often abbreviate $\S^0$ to simply $\S$.
+\item We prefer the notation $\sheaf O_X$ for the ring of functions on a scheme $X$ and $\sheaf I_D$ for ideal sheaf determined by a subscheme $D$, but we will also denote these by the synonyms $\sheaf O(X)$ and $\sheaf I(D)$ when the subscripts reach sufficient complexity.
 \end{itemize}
