definition of formal closed subscheme

--- a/quillen.tex
+++ b/quillen.tex
@@ -242,7 +242,7 @@ We continue to develop vocabulary and accompanying machinery used to give algebr
 To begin, we will be interested in a very particular sort of line bundle over $C$: for any function $f$ on $C$ which is not a zero-divisor, the \index{sheaf!ideal}(ideal) subsheaf $\sheaf I_f = f \cdot \sheaf O_C$ of functions on $C$ which are divisible by $f$ form a $1$--dimensional $\sheaf O_C$--submodule of the ring of functions $\sheaf O_C$ itself---i.e., a line bundle on $C$.  By interpreting $\sheaf I_f$ as an ideal sheaf, this gives rise to a second interpretation of this data in terms of a closed subscheme \[\Spec \sheaf O_C / f \subseteq C,\] which we will refer to as the \index{divisor}\textit{divisor} associated to $\sheaf I_f$.  In general these can be somewhat pathological, so we specialize further to an extremely nice situation:
 
 \begin{definition}[{\cite[Section 5.1]{StricklandFSFG}}]
-An \textit{effective Weil divisor} $D$ on a formal curve $C$ is a closed subscheme of $C$ whose structure map $D \to S$ presents $D$ as finite and free.  We say that the \textit{rank} of $D$ is $n$ when its ring of functions $\sheaf O_D$ is free of rank $n$ over $\sheaf O_S$.
+A formal subscheme $D$ of a formal scheme $X = \colim_\alpha X_\alpha$ is said to be \textit{closed}\index{formal scheme!closed subscheme} when it pulls back along any of the defining affine schemes $X_\alpha \to X$ to give a closed subscheme of $X_\alpha$.  An \textit{effective Weil divisor} $D$ on a formal curve $C$ is a closed subscheme of $C$ whose structure map $D \to S$ presents $D$ as finite and free.  We say that the \textit{rank} of $D$ is $n$ when its ring of functions $\sheaf O_D$ is free of rank $n$ over $\sheaf O_S$.
 \end{definition}
 
 \begin{lemma}[{\cite[Proposition 5.2]{StricklandFSFG}, see also \cite[Example 2.10]{StricklandFSFG}}]
