fix a variance issue

--- a/quillen.tex
+++ b/quillen.tex
@@ -215,7 +215,7 @@ A $1$--form $\omega \in \Omega^1_{A/R}$ is said to be \index{Kahler differential
 \end{definition}
 
 \begin{theorem}\label{RationalFGLsHaveLogarithms}
-For $R$ a $\Q$--algebra, there is a canonical isomorphism of formal groups \[\log\co \G \to T_0 \G \otimes \G_a.\]
+For $R$ a $\Q$--algebra, there is a canonical isomorphism of formal groups \[\log\co \G \to T_0^* \G \otimes \G_a.\]
 \end{theorem}
 \begin{proof}
 We set out to construct such an isomorphism in terms of a coordinate $x$.  In terms of $x$, a differential $\omega$ admits expression as $\omega = f(x) dx$, and the invariance condition above becomes \[f(x) dx = f(y +_\phi x) d(y +_\phi x) = f(y +_\phi x) \frac{\partial(y +_\phi x)}{\partial x} dx.\]  We will analyze the set of such invariant differentials.
