include a diagram depicting the bottom piece of the f.f. descent picture

--- a/finite.tex
+++ b/finite.tex
@@ -57,6 +57,13 @@ Suppose that we begin with an $R$--module $M$ and set $N = f^* M$, so that we ar
 & = (1 \otimes f)^* N \\
 & = N \otimes_R S,
 \end{align*}
+Equivalently, we are noticing that pulling back an $R$--module from the bottom-right corner to the top-left corner along either arm of the following pullback diagram results in an isomorphic $S \otimes_R S$--module:
+\begin{center}
+\begin{tikzcd}
+\Spec S \times_{\Spec R} \Spec S \arrow{r} \arrow{d} & \Spec S \arrow{d} \\
+\Spec S \arrow{r} & \Spec R
+\end{tikzcd}
+\end{center}
 In fact, this isomorphism is compatible with further shuffles, in the sense that the following diagram commutes:\footnote{The commutativity of this triangle shows that any number of shuffles also commutes.}
 \begin{center}
 \begin{tikzcd}
