--- a/finite.tex
+++ b/finite.tex
@@ -584,7 +584,7 @@ To complete the proof, we need to show that $v$ is surjective, which will follow
 \end{proof}
 
 \begin{corollary}\label{PSeriesDetermines}
-If $[p]_\phi(x) = [p]_\phi(x)$ for two $p$--typical formal group laws $+_\phi$ and $+_\psi$, then $+_\phi$ and $+_\psi$ are themselves equal. \qed
+If $[p]_\phi(x) = [p]_\psi(x)$ for two $p$--typical formal group laws $+_\phi$ and $+_\psi$, then $+_\phi$ and $+_\psi$ are themselves equal. \qed
 \end{corollary}
 
 \begin{corollary}\label{EveryPSeriesArises}
