Fix another typo

--- a/finite.tex
+++ b/finite.tex
@@ -500,7 +500,7 @@ Every formal group law $+_\phi$ over a $\Z_{(p)}$--algebra with a logarithm $\lo
 \begin{proof}
 Let $\G$ be the formal group associated to $+_\phi$, and denote its inherited parameter by \[g_0\co \A^1 \xrightarrow{\cong} \G,\] so that the composite \[\A^1 \xrightarrow{g_0} \G \xrightarrow{\log} \G_a \xrightarrow{x} \A^1\] expresses $\log_\phi = \log \circ g_0$ as the power series \[\log_\phi(x) = \sum_{n=1}^\infty a_n x^n.\]  Our goal is to perturb this coordinate to a new coordinate $g_\infty$ which couples with the logarithm in the same way to give a series expansion of the form \[\log(g_\infty(x)) = \sum_{n=0}^\infty a_{p^n} x^{p^n}.\]  To do this, we introduce four operators on functions\footnote{Unfortunately, it is standard in the literature to call these operators on ``curves'', which does not fit well with our previous use of the term in \Cref{ComplexBordismChapter}.} $\A^1 \to \G$:
 \begin{itemize}
-\item Given $r \in R$, we can define a \index{homothety}\textit{homothety} by rescaling the coordinate by $r$: \[\log(\theta_r g_0) = \log(g_0(rx)) = \sum_{n=1}^\infty (a_n r^n) x^n.\]
+\item Given $r \in R$, we can define a \index{homothety}\textit{homothety} by rescaling the coordinate by $r$: \[\log(\theta_r g_0(x)) = \log(g_0(rx)) = \sum_{n=1}^\infty (a_n r^n) x^n.\]
 \item For $\ell \in \Z$, we can define a shift operator (or \index{Verschiebung}\textit{Verschiebung}) by \[\log(V_\ell g_0(x)) = \log(g(x^\ell)) = \sum_{n=1}^\infty a_n x^{n \ell}.\]
 \item Given an $\ell \in \Z_{(p)}$, we define the \index{formal group!l series@$\ell$--series}\textit{$\ell$--series} by\footnote{Note that for $\ell \in \Z$, this agrees with $[\ell](g_0(x)) = \overset{\text{$\ell$ times}}{\overbrace{g_0(x) +_{\G} \cdots +_{\G} g_0(x)}}$.} \[\log([\ell](g_0(x))) = \ell \log(g_0(x)) = \sum_{n=1}^\infty \ell a_n x^n.\]
 \item For $\ell \in \Z$, we can define a \index{Frobenius}\textit{Frobenius operator}\footnote{There are other definitions of the Frobenius operator which are less mysterious but less explicit.  For instance, it also arises from applying the Verschiebung to the character group (or ``Cartier dual'') of $\G$.} by \[\log(F_\ell g_0(x)) = \log\left(\sumG_{j=1}^\ell g_0(\zeta_\ell^j x^{1/\ell}) \right),\] where $\zeta_\ell$ is a primitive $\ell${\th} root of unity.  Because this formula is Galois--invariant in choice of primitive root, it actually expands to a series which lies over the ground ring (without requiring an extension by $\zeta_\ell$).  But, by pulling the logarithm through and noting \[\sum_{j=1}^\ell \zeta_\ell^{jn} = \begin{cases}\ell & \text{if $\ell \mid n$}, \\ 0 & \text{otherwise}, \end{cases}\] we can explicitly compute the behavior of $F_\ell$: \[\log(F_\ell g_0(x)) = \sum_{n=1}^\infty \ell a_{n \ell} x^n.\]
