--- a/finite.tex
+++ b/finite.tex
@@ -442,7 +442,7 @@ Once this is achieved, we can apply \Cref{MfglIsSmooth} to a surjective map of r
 A map $\G\co \Spec R \to \moduli{fg}$ lifts to $\moduli{fgl}$ exactly when the Lie algebra $T_0 \G$ of $\G$ is isomorphic to $R$.
 \end{lemma}
 \begin{proof}
-Certainly if $\G$ admits a global coordinate, then $T_0 \G \cong R$.  Conversely, the formal group $\G$ is certainly locally isomorphic to $\A^1$ by a covering \[i_\alpha\co X_\alpha \to \Spec R\] and isomorphisms \[\phi_\alpha\co i_\alpha^* \G \cong \A^1.\]  However, \textit{a priori}, these isomorphisms may not glue, corresponding to the potential nontriviality of the {\Cech} $1$--cocycle \[[\phi_\alpha] \in \check{H}^1(\Spec R; \moduli{ps}^{\gpd}).\]  The group scheme $\moduli{ps}^{\gpd}$ is populated by $T$--points of the form \[\moduli{ps}^{\gpd}(T) = \left\{ t_0 x + t_1 x^2 + t_2 x^3 + \cdots \mid t_j \in T, t_0 \in T^\times \right\},\] and it is admits a filtration by the closed subschemes \[\moduli{ps}^{\gpd, \ge N}(T) = \left\{ 1 \cdot x + t_N x^{N+1} + t_{N+1} x^{N+2} + \cdots \mid t_j \in T \right\}.\]  The associated graded of this filtration is $\Gm \times \mathbb G_a^{\times \infty}$, and hence the filtration spectral sequence shows \[\check{H}^1(\Spec R; \moduli{ps}^{\gpd}) \xrightarrow{\simeq} \check{H}^1(\Spec R; \Gm),\] as $\check{H}^1(\Spec R; \mathbb G_a) = 0$ for all affine schemes.  Finally, given a choice\footnote{Incidentally, a choice of trivialization of $T_0 \G$ exactly resolves the indeterminacy of $\log'(0)$ in \Cref{RationalFGLsHaveLogarithms}.} of trivialization $T_0 \G \cong R$, this induces compatible trivializations of $T_0 i_\alpha^* \G$, which we can use to rescale the isomorphisms $\phi_\alpha$ so that their image in $\check{H}^1(\Spec R; \Gm)$ vanishes, and hence $[\phi_\alpha]$ is induced from a class in \[\check{H}^1(\Spec R; \moduli{ps}^{\gpd, \ge 1}).\]  This obstruction group vanishes.
+Certainly if $\G$ admits a global coordinate, then $T_0 \G \cong R$.  Conversely, the formal group $\G$ is certainly locally isomorphic to $\A^1$ by a covering \[i_\alpha\co X_\alpha \to \Spec R\] and isomorphisms \[\phi_\alpha\co i_\alpha^* \G \cong \A^1.\]  However, \textit{a priori}, these isomorphisms may not glue, corresponding to the potential nontriviality of the {\Cech} $1$--cocycle \[[\phi_\alpha] \in \check{H}^1(\Spec R; \moduli{ps}^{\gpd}).\]  The group scheme $\moduli{ps}^{\gpd}$ is populated by $T$--points of the form \[\moduli{ps}^{\gpd}(T) = \left\{ t_0 x + t_1 x^2 + t_2 x^3 + \cdots \mid t_j \in T, t_0 \in T^\times \right\},\] and it is admits a filtration by the closed subschemes \[\moduli{ps}^{\gpd, \ge N}(T) = \left\{ 1 \cdot x + t_N x^{N+1} + t_{N+1} x^{N+2} + \cdots \mid t_j \in T \right\}.\]  The associated graded of this filtration is $\Gm \times \mathbb G_a^{\times \infty}$, and hence the filtration spectral sequence shows \[\check{H}^1(\Spec R; \moduli{ps}^{\gpd}) \xrightarrow{\simeq} \check{H}^1(\Spec R; \Gm),\] as $\check{H}^1(\Spec R; \mathbb G_a) = 0$ for all affine schemes.  Finally, given a choice\footnote{Incidentally, a choice of trivialization of $T_0 \G$ exactly resolves the indeterminacy of $\log'(0)$ baked in to \Cref{RationalFGLsHaveLogarithms}.} of trivialization $T_0 \G \cong R$, this induces compatible trivializations of $T_0 i_\alpha^* \G$, which we can use to rescale the isomorphisms $\phi_\alpha$ so that their image in $\check{H}^1(\Spec R; \Gm)$ vanishes, and hence $[\phi_\alpha]$ is induced from a class in \[\check{H}^1(\Spec R; \moduli{ps}^{\gpd, \ge 1}).\]  This obstruction group vanishes.
 \end{proof}
 
 \begin{remark}\label{StrictIsosRemark}
