add height(Gm) as an example

--- a/finite.tex
+++ b/finite.tex
@@ -475,6 +475,10 @@ One of our overarching tasks from the introduction to this Case Study is to enha
 Let $+_\phi$ be a formal group law over a $\Z_{(p)}$--algebra.  Let $n$ be the largest degree such that there exists a formal power series $\ell$ with \[\ell(x +_\phi y) = \ell(x) + \ell(y) \pmod{(x, y)^{n}},\] i.e., $\ell$ is a logarithm for the $(n-1)$--bud determined by $+_\phi$.  The \index{formal group!height}\textit{$p$--height of $+_\phi$} is defined to be $\log_p(n)$.
 \end{definition}
 
+\begin{example}
+The unit-speed invariant differential associated to the usual coordinate on the muliplicative group has the form \[\omega(x) = (1 + x + x^2 + \cdots + x^{p-1} + \cdots) dx.\]  The radius of convergence of this ordinary differential equation in $\Z_{(p)}$ is $p$, owing to the term \[\int x^{p-1} dx = \frac{x^p}{p} \not\in \Z_{(p)}[x].\]  We thus see that $\G_m$ has height $\log_p(p) = 1$.
+\end{example}
+
 This turns out to be a crucial invariant of a formal group law, admitting many other interesting presentations.  In this Lecture, investigation of this definition will lead us to a classification of the closed substacks of $\moduli{fg}$, another of our overarching tasks.  As a first step, we would like to show that this value is well-behaved in various senses, including the following:
 \begin{lemma}[{cf.\ \cite[Proposition 13.6]{LurieChromaticCourseNotes}}]\label{FGLHeightIsAnInteger}
 Over a field of positive characteristic $p$, the $p$--height of a formal group law is always an integer (or $\infty$).  (That is, the radius of convergence of the logarithmic differential equation is either $\infty$ or $p^d$ for some nonnegative natural $d$.)
