fix the bibliography’s appearance in the ToC

--- a/main.tex
+++ b/main.tex
@@ -86,20 +86,25 @@
 
 \include{unknowns}
 
-
+\endappendix
+\addtocontents{toc}{\vspace{\baselineskip}}
 
 
 
 \backmatter
 
-\renewcommand\chaptername{\relax}
-
+\renewcommand{\refname}{Bibliography}
+\renewcommand\bibsection{\chapter*{\refname}}
+\cleardoublepage
+\phantomsection
+\addcontentsline{toc}{chapter}{\refname}
 \bibliographystyle{alpha}
 \bibliography{main}
 
 
 
 \cleardoublepage
+\phantomsection
 \printindex
 
 
