break out Tate vanishing on induced objects as a separate example

--- a/quillen.tex
+++ b/quillen.tex
@@ -689,11 +689,17 @@ f \arrow[|->]{r} & P^G f \arrow[|->]{rr} & & P^G_{\Tate} f.
 \end{center}
 \end{definition}
 
+\begin{example}
+The Tate spectrum is quite a destructive operation in the case of $G = C_p$.\footnote{In fact, its job in general is to be destructive, and the failure of this Example for other groups is a sign that we have chosen the ``wrong'' definition. For a general group $G$, the definition of ``Tate construction'' can be modified to kill all intermediate transfers, not just those which transfer up from the trivial subgroup---but this requires understanding \textit{families} of subgroups, which is more equivariant homotopy theory than we otherwise need.}  For example, take $X$ to be a trivial $C_p$--spectrum, and let $\bigvee_{C_p} X$ be the $C_p$--indexed wedge with the free action.  Because the norm map composed with the restriction map encodes multiplication by $p$, this forces the norm map itself to be an equivalence, and hence the cofiber seuqnece \[\left(\bigvee_{C_p} X \right)_{hC_p} \xrightarrow{\simeq} \left( \bigvee_{C_p} X \right)^{hC_p} \to \left( \bigvee_{C_p} X \right)^{tC_p}\] causes $(\bigvee_{C_p} X)^{tC_p}$ to be contractible.
+\end{example}
+
+As another example of the destructiveness of the Tate operation, we have the following:
+
 \begin{lemma}
 In the case $G = C_p$, the Tate power operation is additive.
 \end{lemma}
 \begin{proof}
-The image of the map $\pi_0 (E^{\Susp^\infty_+ X})_{hC_p} \to \pi_0 (E^{\Susp^\infty_+ X})^{hC_p}$ is the kernel of the projection to the Tate object.  Since the only proper subgroup of $C_p$ is the trivial subgroup, this image contains all transfers.\footnote{For a general group $G$, the definition of ``Tate construction'' must be modified to kill all intermediate transfers, and not just those which transfer up from the trivial subgroup.  Such a topological construction is possible, but it requires understanding \textit{families} of subgroups, which is more equivariant homotopy theory than we otherwise need.}\todo{Maybe find a reference for Justin's construction.}
+The image of the map $\pi_0 (E^{\Susp^\infty_+ X})_{hC_p} \to \pi_0 (E^{\Susp^\infty_+ X})^{hC_p}$ is the kernel of the projection to the Tate object.  Since the only proper subgroup of $C_p$ is the trivial subgroup, this image contains all transfers.
 \end{proof}
 
 The real miracle is that these cyclic Tate power operations are not only additive, but they are even \emph{completely} computable.
@@ -717,7 +723,7 @@ F_0 \arrow{r} & F_1 \arrow{r} & \cdots \arrow{r} & F_{p-1} \arrow{r} & Y^{\sm p}
 X^{\sm p} \arrow[equal]{u} & \bigvee X^{\sm (p-1)} \sm (Y/X) \arrow[leftarrow]{u} & \cdots & \bigvee X \sm (Y/X)^{\sm (p-1)} \arrow[leftarrow]{u} & (Y/X)^{\sm p} \arrow[leftarrow]{u}.
 \end{tikzcd}
 \end{center}
-We now apply $(-)^{tC_p}$ to this diagram.  The Tate construction carries cofiber sequences of $C_p$--spectra to cofiber sequences of spectra, so this is again a filtration diagram.  In the intermediate filtration quotients, the $C_p$--action is given by freely cycling wedge factors (i.e., these spectra are induced up from spectra with trivial actions), from which it follows that the Tate construction vanishes on these nodes.  Hence, the diagram postcomposed with the Tate construction takes the form
+We now apply $(-)^{tC_p}$ to this diagram.  The Tate construction carries cofiber sequences of $C_p$--spectra to cofiber sequences of spectra, so this is again a filtration diagram.  In the intermediate filtration quotients, the $C_p$--action is given by freely permuting wedge factors, from which it follows that the Tate construction vanishes on these nodes.  Hence, the diagram postcomposed with the Tate construction takes the form
 \begin{center}
 \begin{tikzcd}
 F_0^{tC_p} \arrow[equiv]{r} & F_1^{tC_p} \arrow[equiv]{r} & \cdots \arrow[equiv]{r} & F_{p-1}^{tC_p} \arrow{r} & (Y^{\sm p})^{tC_p} \\
